--- a/build.gradle
+++ b/build.gradle
@@ -4,30 +4,18 @@ buildscript {
     ext {
         kotlin_version = "1.5.31"
     }
-    /*
-    repositories {
-        google()
-        mavenCentral()
-    } */
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.3.0' apply false
-    id 'com.android.library' version '7.3.0' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
-
-/*allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-} */
 
 task clean(type: Delete) {
     delete rootProject.buildDir
